# dhan-tracker

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  dev.bat  dev.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  startup.txt
.github/workflows/: azure-deploy.yml  main_dhan-tracker.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  AuthContext.jsx  api.js  api.ts  hooks.js  hooks.ts  index.css  store.ts  types.ts  utils.js  utils.ts
frontend/src/components/: Login.jsx  Login.tsx  Toast.jsx  Toast.tsx
frontend/src/pages/: ETF.css  ETF.jsx  ETF.tsx  Portfolio.css  Portfolio.jsx  Portfolio.tsx
src/dhan_tracker/: __init__.py  client.py  config.py  database.py  models.py  notifications.py  nse_client.py  protection.py  scheduler.py  triggers.py  upstox_client.py
static/: etf.html  index.html
static/assets/: index-1VoOL6Wc.js  index-BAdIvAbu.js  index-C0ndBDTJ.js  index-CuGPnxts.js  index-CzdmRD5Q.js  index-D5V75Jbz.css  index-DFi8WQjz.css  index-DN6Y3NZX.js  index-DRcSs29Z.css  index-DtzZ8517.js  index-Dy0MFfbl.js  index-JBBp_JKt.js  index-bX7oWGIX.js  index-h4FMndWR.css  index-osvnmPg3.css
tests/: test_server.py
